# pyARSA

./: .gitignore  Master_loads_tool_v1.4(XXX_XXXX_vXXX).xlsm  README.md  emf_clipboard.py  example_1.py  example_2.py  example_screen_capture.py  main.py  pyLoad.py  pyMasterLoadsTool.py  pyproject.toml  screen_capture.py  shell_console.py
src/: PyARSA.py  Structure.py  __init__.py  clipboard_rbt_view.py  get_clipboard_image.py  pyARSAReporting.py  save_screenshot.py  utilities.py
