[tool.poetry]
name = "pyrobot"
version = "0.1.0"
description = ""
authors = ["Marcin Wolinski <mwo@woodthilsted.com>"]
readme = "README.md"
packages = [{include = "pyrobot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pythonnet = "^3.0.1"
pywin32 = "^306"
numpy = "^1.26.4"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pillow = "^10.2.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
